# Meet_Move-ThermalPrivacy

./: README.md
code/poc/privacy/anonimisationDemo/: CMakeLists.txt
code/poc/privacy/anonimisationDemo/src/: anonimisation.hpp  main.cpp
code/pose/poseVerifier/: CMakeLists.txt  configure.sh
code/pose/poseVerifier/crsRoomOpenposeOutput/8-bit_single_room/: vid3_IR_000000000108_keypoints.json  vid3_IR_000000000109_keypoints.json  vid3_IR_000000000110_keypoints.json  vid3_IR_000000000111_keypoints.json  vid3_IR_000000000112_keypoints.json  vid3_IR_000000000113_keypoints.json  vid3_IR_000000000114_keypoints.json  vid3_IR_000000000115_keypoints.json  vid3_IR_000000000116_keypoints.json  vid3_IR_000000000117_keypoints.json  vid3_IR_000000000118_keypoints.json  vid3_IR_000000000119_keypoints.json  vid3_IR_000000000120_keypoints.json  vid3_IR_000000000121_keypoints.json  vid3_IR_000000000122_keypoints.json  vid3_IR_000000000123_keypoints.json  vid3_IR_000000000124_keypoints.json  vid3_IR_000000000125_keypoints.json  vid3_IR_000000000126_keypoints.json  vid3_IR_000000000127_keypoints.json  vid3_IR_000000000128_keypoints.json  vid3_IR_000000000129_keypoints.json  vid3_IR_000000000130_keypoints.json  vid3_IR_000000000131_keypoints.json  vid3_IR_000000000132_keypoints.json  vid3_IR_000000000133_keypoints.json  vid3_IR_000000000134_keypoints.json  vid3_IR_000000000135_keypoints.json  vid3_IR_000000000136_keypoints.json  vid3_IR_000000000137_keypoints.json  vid3_IR_000000000138_keypoints.json  vid3_IR_000000000139_keypoints.json  vid3_IR_000000000140_keypoints.json  vid3_IR_000000000141_keypoints.json  vid3_IR_000000000142_keypoints.json  vid3_IR_000000000143_keypoints.json  vid3_IR_000000000144_keypoints.json  vid3_IR_000000000145_keypoints.json  vid3_IR_000000000146_keypoints.json  vid3_IR_000000000147_keypoints.json  (+1455 more)
code/pose/poseVerifier/crsRoomOpenposeOutput/8-bit_thermal/: vid1_IR_000000000060_keypoints.json  vid1_IR_000000000061_keypoints.json  vid1_IR_000000000062_keypoints.json  vid1_IR_000000000063_keypoints.json  vid1_IR_000000000064_keypoints.json  vid1_IR_000000000065_keypoints.json  vid1_IR_000000000066_keypoints.json  vid1_IR_000000000067_keypoints.json  vid1_IR_000000000068_keypoints.json  vid1_IR_000000000069_keypoints.json  vid1_IR_000000000070_keypoints.json  (+3943 more)
code/pose/poseVerifier/src/: main.cpp  pose.cpp  pose.hpp
(+21403 files in other folders)
